Fixed README to point to docs/demo. Added more keywords.

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,11 @@
   "description": "An &lt;iron-collapse&gt; container that works similarly to &lt;paper-menu-button&gt;. There is a trigger section and a collapsible section.",
   "main": "iron-collapse-button.html",
   "keywords": [
-    "web-components"
+    "web-components",
+    "iron-collapse-button",
+    "iron",
+    "collapse",
+    "button"
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
