--- a/bower.json
+++ b/bower.json
@@ -10,14 +10,18 @@
     "button"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.7.0",
-    "iron-collapse": "^1.2.1"
+    "polymer": "Polymer/polymer#^2.0.0-rc.3",
+    "iron-collapse": "#2.0-preview"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
+    "web-component-tester": "6.0.0-prerelease.5",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.6"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "resolutions": {
+    "polymer": "^2.0.0-rc.3",
+    "webcomponentsjs": "^1.0.0-rc.6"
+  }
 }
