Update to Polymer 2.0

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "iron-collapse-button",
-  "description": "An &lt;iron-collapse&gt; container that works similarly to &lt;paper-menu-button&gt;. There is a trigger section and a collapsible section.",
+  "description": "An iron-collapse container that works similarly to &lt;paper-menu-button&gt;. There is a trigger section and a collapsible section.",
+  "authors": ["Jacob Phillips (https://github.com/jifalops)"],
+  "license": "MIT",
   "main": "iron-collapse-button.html",
   "keywords": [
     "web-components",
@@ -10,18 +12,13 @@
     "button"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.3",
-    "iron-collapse": "#2.0-preview"
+    "polymer": "^2.0.0",
+    "iron-collapse": "^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
-    "web-component-tester": "6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.6"
-  },
-  "license": "MIT",
-  "resolutions": {
-    "polymer": "^2.0.0-rc.3",
-    "webcomponentsjs": "^1.0.0-rc.6"
+    "iron-demo-helpers": "^2.0.0",
+    "iron-component-page": "^2.0.0",
+    "web-component-tester": "^6.0.0",
+    "webcomponentsjs": "^1.0.0"
   }
 }
